--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,26 +5,20 @@ set (CMAKE_CXX_STANDARD 17)
 find_package( PythonInterp 3 REQUIRED )
 
 set(CMAKE_BUILD_TYPE Debug)
-set(CMAKE_CXX_FLAGS "-Wall")
+set(CMAKE_CXX_FLAGS "-Wall -Wno-switch")
 
 string(TOUPPER ${CMAKE_BUILD_TYPE} build_affix)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
 
-add_executable(loxc src/main.cc src/scan.cc src/token.cc src/val.cc src/op.cc src/parse.cc)
-
-add_custom_target(
- expr ALL
- COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/tools/expression_generator.py
- BYPRODUCTS src/expr.h
- COMMENT "Generating expressions"
-)
 add_custom_target(
  stmt ALL
- COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/tools/stmt_generator.py
- BYPRODUCTS src/stmt.h
- COMMENT "Generating statements"
+ COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/tools/stmt_generator.py && ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/tools/expression_generator.py
+ BYPRODUCTS src/stmt.h src/expr.h
+ COMMENT "Doing autogeneration."
 )
+
+add_executable(loxc src/main.cc src/scan.cc src/token.cc src/val.cc src/op.cc src/parse.cc)
 
 set(summary
     "=================|  Loxc Config Summary  |==================="
