--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ set (CMAKE_CXX_STANDARD 17)
 
 find_package( PythonInterp 3 REQUIRED )
 
-set(CMAKE_BUILD_TYPE Debug)
-set(CMAKE_CXX_FLAGS "-Wall -Wno-switch -O3")
+set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_CXX_FLAGS "-Wall -Wno-switch")
 
 string(TOUPPER ${CMAKE_BUILD_TYPE} build_affix)
 
